--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,4 @@ PORT=5000
 NODE_ENV=development
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
 
-
+DATABASE_URL=mysql://user:password@localhost:3306/your-database-name
